# task-flask-app

./: .containerignore  .gitignore  LICENSE  README.md  compose.yaml  containerfile  dev  dev.ps1  pyproject.toml  requirements.package.txt
src/cajon/: __init__.py  main.py
src/cajon/backend/: __init__.py  _utils.py  actions.py  auth.py  models.py  transactions.py  upload.py  views.py
src/cajon/static/: base.css
src/cajon/templates/: base.html  index.html
src/cajon/templates/actions/: query.html  upload.html
src/cajon/templates/auth/: _auth_form.html  login.html  signup.html
tests/: __init__.py
